# NTUget

./: .dockerignore  .gitignore  CMakeLists.txt  COPYING  Dockerfile  LICENSE  Makefile  Makefile.am  README.md  build.sh  configure.ac
.github/workflows/: build.yml
CMake/: FindCurl.cmake
include/: Makefile.am  api_parser.h  config.h  downloader.h  encoder.h  request.h  utils.h
ntuget/include/: api_parser.h  config.h  json.h  login.h  request.h  utils.h
ntuget/src/: api_parser.c  encoder.c  json.c  login.c  ntuget.c  utils.c
src/: Makefile.am  Makefile.inc  downloader.c  ntuget.c  request.c
test/: run-test.sh  test.c  test.h  unit-001.c  unit-002.c
