CMAKE_MINIMUM_REQUIRED(VERSION 3.22)

PROJECT(ntuget)

SET(CMAKE_C_STANDARD 17)
SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/CMake)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include ${CMAKE_SOURCE_DIR}/_dep/include)

FIND_PACKAGE(Curl REQUIRED)
INCLUDE_DIRECTORIES(${CURL_INCLUDE_DIR})

FILE(GLOB_RECURSE SOURCES "src/*.c")

ADD_EXECUTABLE(ntuget ${SOURCES})

TARGET_LINK_LIBRARIES(ntuget ${CURL_LIBRARY} m)

IF(CMAKE_BUILD_TYPE STREQUAL "Debug")
    TARGET_COMPILE_OPTIONS(ntuget PRIVATE -g -Wall -Wextra -Wno-unused-parameter -pedantic -fsanitize=address)
    TARGET_LINK_OPTIONS(ntuget PRIVATE -fsanitize=address)
ELSEIF(CMAKE_BUILD_TYPE STREQUAL "Release")
    TARGET_COMPILE_OPTIONS(ntuget PRIVATE -O2 -DNDEBUG)
    TARGET_LINK_OPTIONS(ntuget PRIVATE -s)
ENDIF()

ADD_CUSTOM_COMMAND(TARGET ntuget POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy_if_different
    ${CMAKE_SOURCE_DIR}/curl-ca-bundle.crt
    $<TARGET_FILE_DIR:ntuget>
)
