AUTOMAKE_OPTIONS = foreign no-dependencies

pkginclude_HEADERS =           \
    api_parser.h               \
    config.h                   \
    downloader.h               \
    encoder.h                  \
    json.h                     \
    login.h                    \
    request.h                  \
    utils.h

pkgincludedir= $(includedir)
